--- a/assistant/templates/dashboard/sidebar.html
+++ b/assistant/templates/dashboard/sidebar.html
@@ -30,6 +30,7 @@
     <!-- Skip links will be dynamically added by accessibility.js -->
     <meta name="supported-color-schemes" content="light dark" />
     <link rel="preload" href="{% static 'assistant/css/adminlte.css' %}" as="style" />
+    <link rel="stylesheet" href="{% static 'assistant/css/main.css' %}" as="style" />
     <!--end::Accessibility Features-->
 
     <!--begin::Fonts-->
@@ -299,7 +300,7 @@
       </nav>
       <!--end::Header-->
       <!--begin::Sidebar-->
-      <aside class="app-sidebar bg-body-primary shadow" data-bs-theme="dark">
+      <aside class="app-sidebar bg-custom-main shadow" data-bs-theme="dark">
         <!--begin::Sidebar Brand-->
         <div class="sidebar-brand">
           <!--begin::Brand Link-->
