--- a/assistant/templates/layout/sidebar.html
+++ b/assistant/templates/layout/sidebar.html
@@ -122,7 +122,7 @@
                   class="user-image rounded-circle shadow"
                   alt="User Image"
                 />
-                <span class="d-none d-md-inline">Alexander Pierce</span>
+                <span class="d-none d-md-inline">Arturo Diano Segundo</span>
               </a>
               <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end bg-body-primary">
                 <!--begin::User Image-->
@@ -133,8 +133,8 @@
                     alt="User Image"
                   />
                   <p>
-                    Alexander Pierce - Web Developer
-                    <small>Member since Nov. 2023</small>
+                    Arturo Diano Segundo
+                    <small>Miembro desde Noviembre 2023</small>
                   </p>
                 </li>
                 <!--end::User Image-->
@@ -165,13 +165,13 @@
           <a href="./index.html" class="brand-link">
             <!--begin::Brand Image-->
             <img
-              src="{% static 'assistant/assets/img/AdminLTELogo.png' %}"
+              src="{% static 'assistant/assets/img/bone.png' %}"
               alt="Logo"
               class="brand-image opacity-75 shadow"
             />
             <!--end::Brand Image-->
             <!--begin::Brand Text-->
-            <span class="brand-text fw-light fs-5">Asistente Huesos</span>
+            <span class="brand-text fw-light fs-5 ">Asistente Huesos</span>
             <!--end::Brand Text-->
           </a>
           <!--end::Brand Link-->
@@ -257,16 +257,13 @@
       
       <!--end::App Main-->
       <!--begin::Footer-->
-      <footer class="app-footer">
-        <!--begin::To the end-->
-        <div class="float-end d-none d-sm-inline">Anything you want</div>
-        <!--end::To the end-->
+      <footer class="app-footer d-flex flex-column align-items-center">
         <!--begin::Copyright-->
         <strong>
           Copyright &copy; 2025&nbsp;
-          <a href="#" class="text-decoration-none">AdminLTE.io</a>.
+          <a href="https://shawdog.work/" class="text-decoration-none">Shawdog S.A. de C.V.</a>
         </strong>
-        All rights reserved.
+        Todos los derechos reservados.
         <!--end::Copyright-->
       </footer>
       <!--end::Footer-->
