--- a/assistant/templates/user/dashboard.html
+++ b/assistant/templates/user/dashboard.html
@@ -138,40 +138,25 @@
 
         <!-- Start col -->
         <div class="col-lg-5 connectedSortable">
-          <div class="card text-white bg-primary bg-gradient border-primary mb-4">
+          <div class="card text-bg-custom-primary bg-gradient mb-4">
             <div class="card-header border-0">
-              <h3 class="card-title">Sales Value</h3>
-              <div class="card-tools">
-                <button
-                  type="button"
-                  class="btn btn-primary btn-sm"
-                  data-lte-toggle="card-collapse"
-                >
-                  <i data-lte-icon="expand" class="bi bi-plus-lg"></i>
-                  <i data-lte-icon="collapse" class="bi bi-dash-lg"></i>
-                </button>
-              </div>
+              <h3 class="card-title fs-4" style="color: black;">Comandos más usados</h3>
             </div>
             <div class="card-body">
-              <div id="world-map" style="height: 220px"></div>
-            </div>
-            <div class="card-footer border-0">
-              <!--begin::Row-->
-              <div class="row">
-                <div class="col-4 text-center">
-                  <div id="sparkline-1" class="text-dark"></div>
-                  <div class="text-white">Visitors</div>
-                </div>
-                <div class="col-4 text-center">
-                  <div id="sparkline-2" class="text-dark"></div>
-                  <div class="text-white">Online</div>
-                </div>
-                <div class="col-4 text-center">
-                  <div id="sparkline-3" class="text-dark"></div>
-                  <div class="text-white">Sales</div>
-                </div>
-              </div>
-              <!--end::Row-->
+              <ol>
+                <li>
+                  <p class="fs-6" style="color: black;">Reproducir Música</p>
+                </li>
+                <li>
+                  <p class="fs-6" style="color: black;">Consultar Dispositivo</p>                  
+                </li>
+                <li>
+                  <p class="fs-6" style="color: black;">Consultar el Clima</p>
+                </li>
+                <li>
+                  <p class="fs-6" style="color: black;">Poner un temporizador</p>
+                </li>
+              </ol>
             </div>
           </div>
         </div>
