--- a/assistant/templates/register.html
+++ b/assistant/templates/register.html
@@ -16,6 +16,7 @@
 				</div>
 
 				<form class="login100-form validate-form" method="post">
+					{% csrf_token %}
 					<div class="wrap-input100 validate-input m-b-26" data-validate="Nombre de usuario requerido">
 						<input class="input100" type="email" name="email" placeholder="Correo electrónico">
 						<span class="focus-input100"></span>
@@ -27,22 +28,22 @@
 					</div>
                     
 					<div class="wrap-input100 validate-input m-b-26" data-validate="Nombre de usuario requerido">
-						<input class="input100" type="text" name="username" placeholder="Nombre">
+						<input class="input100" type="text" name="first_name" placeholder="Nombre">
 						<span class="focus-input100"></span>
 					</div>
                     
 					<div class="wrap-input100 validate-input m-b-26" data-validate="Nombre de usuario requerido">
-						<input class="input100" type="text" name="username" placeholder="Apellidos">
+						<input class="input100" type="text" name="last_name" placeholder="Apellidos">
 						<span class="focus-input100"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-18" data-validate = "Contraseña requerida">
-						<input class="input100" type="password" name="password" placeholder="Ingresa tu contraseña">
+						<input class="input100" type="password" name="password1" placeholder="Ingresa tu contraseña">
 						<span class="focus-input100"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-18" data-validate = "Contraseña requerida">
-						<input class="input100" type="password" name="repeatpassword" placeholder="Ingresa tu contraseña">
+						<input class="input100" type="password" name="password2" placeholder="Ingresa tu contraseña">
 						<span class="focus-input100"></span>
 					</div>
 
